--- a/index.html
+++ b/index.html
@@ -4,16 +4,353 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test Project - bootstrap scss</title>
+  <title>Document</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
-<body class="bg-light">
-  <button class="btn-warning btn">submit</button>
-  <button class="btn-outline-warning btn">cancle</button>
-  <img src="node_modules/bootstrap-icons/icons/airplane-engines.svg" alt="">
-  <img src="node_modules/bootstrap-icons/icons/apple.svg" alt="">
-  <img src="node_modules/bootstrap-icons/icons/arrow-through-heart.svg" alt="">
-  <img src="node_modules/bootstrap-icons/icons/balloon-heart.svg" alt="">
-  <img src="node_modules/bootstrap-icons/icons/capsule-pill.svg" alt="">
+<body>
+  <!-- navbar -->
+  <nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top">
+    <div class="container-fluid">
+      <h1 class="d-none">Homepage</h1>
+      <a class="navbar-brand text-light" href="#">EBS <i class="bi bi-cup-hot-fill"></i></a>
+      <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-between" id="nav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link text-light dropdown-toggle" data-bs-toggle="dropdown" href="#">Link</a>
+            <div class="dropdown-menu">
+              <a href="#" class="dropdown-item">Link 01</a>
+              <a href="#" class="dropdown-item">Link 02</a>
+              <a href="#" class="dropdown-item">Link 03</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled text-light" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          </li>
+        </ul>
+        <form class="form-inline ml-3">
+          <div class="input-group">
+            <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+            <div class="input-group-append">
+              <button class="btn bg-light rounded-0 rounded-end" type="submit">
+                <i class="bi bi-search"></i>
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </nav>
+
+  <!-- main slide -->
+  <section>
+    <div class="container-fluid p-0" style="overflow: hidden;">
+      <div id="carouselWithIndicators" class="carousel slide carousel-dark bg-dark">
+        <ol class="carousel-indicators">
+          <li data-bs-target="#carouselWithIndicators" data-bs-slide-to="0" class="active"></li>
+          <li data-bs-target="#carouselWithIndicators" data-bs-slide-to="1"></li>
+          <li data-bs-target="#carouselWithIndicators" data-bs-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner h-100">
+          <div class="carousel-item h-100 active">
+            <img src="http://placekitten.com/1920/1400" class="d-block w-100" alt="Slide 1">
+            <div class="carousel-caption d-none d-md-block">
+              <h3 class="fs-1 fw-bold text-dark">Title 1</h3>
+              <h4 class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit qui dolore corporis placeat consectetur eum ea, vero quia cumque, sint quos tenetur officiis ad sequi provident, facere quibusdam adipisci amet?</h4>
+              <a href="#" class="btn btn-dark btn-lg px-4 m-3">go</a>
+              <a href="#" class="btn btn-lg border border-dark border-3 text-dark fw-bold px-4 m-3">more</a>
+            </div>
+          </div>
+          <div class="carousel-item h-100">
+            <img src="http://placekitten.com/1920/1400" class="d-block w-100" alt="Slide 2">
+            <div class="carousel-caption d-none d-md-block">
+              <h3 class="fs-1 fw-bold text-dark">Title 2</h3>
+              <h4 class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit qui dolore corporis placeat consectetur eum ea, vero quia cumque, sint quos tenetur officiis ad sequi provident, facere quibusdam adipisci amet?</h4>
+              <a href="#" class="btn btn-dark btn-lg px-4 m-3">go</a>
+              <a href="#" class="btn btn-lg border border-dark border-3 text-dark fw-bold px-4 m-3">more</a>
+            </div>
+          </div>
+          <div class="carousel-item h-100">
+            <img src="http://placekitten.com/1920/1400" class="d-block w-100" alt="Slide 3">
+            <div class="carousel-caption d-none d-md-block">
+              <h3 class="fs-1 fw-bold text-dark">Title 3</h3>
+              <h4 class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit qui dolore corporis placeat consectetur eum ea, vero quia cumque, sint quos tenetur officiis ad sequi provident, facere quibusdam adipisci amet?</h4>
+              <a href="#" class="btn btn-dark btn-lg px-4 m-3">go</a>
+              <a href="#" class="btn btn-lg border border-dark border-3 text-dark fw-bold px-4 m-3">more</a>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselWithIndicators" role="button" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselWithIndicators" role="button" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- skills -->
+  <section class="bg-light p-5">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col text-center mb-3">
+          <h2 class="text-primary display-2">Skills</h2>
+          <p class="lead text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo beatae autem officiis, possimus neque, voluptate numquam minima tempora soluta, harum reiciendis totam magni rem! Eveniet temporibus vitae deleniti tenetur eum.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row text-center">
+      <div class="col-lg-4 col-sm-10 mx-auto mb-5">
+        <i class="bi bi-file-earmark-code text-primary display-4"></i>
+        <h3 class="text-primary fw-bold">Development</h3>
+        <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste dolores fugit natus veniam doloribus alias, tenetur hic exercitationem inventore quas optio voluptate dolore consequuntur earum aspernatur libero quasi illo odio.</p>
+        <a href="#" class="btn bg-primary text-light">Read More</a>
+      </div>
+      <div class="col-lg-4 col-sm-10 mx-auto mb-5">
+        <i class="bi bi-vector-pen text-primary display-4"></i>
+        <h3 class="text-primary fw-bold">Design</h3>
+        <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste dolores fugit natus veniam doloribus alias, tenetur hic exercitationem inventore quas optio voluptate dolore consequuntur earum aspernatur libero quasi illo odio.</p>
+        <a href="#" class="btn bg-primary text-light">Read More</a>
+      </div>
+      <div class="col-lg-4 col-sm-10 mx-auto mb-5">
+        <i class="bi bi-tools text-primary display-4"></i>
+        <h3 class="text-primary fw-bold">Creative</h3>
+        <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste dolores fugit natus veniam doloribus alias, tenetur hic exercitationem inventore quas optio voluptate dolore consequuntur earum aspernatur libero quasi illo odio.</p>
+        <a href="#" class="btn bg-primary text-light">Read More</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- projects -->
+  <section class="p-5">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col text-center mb-3">
+          <h2 class="text-primary display-2">Projects</h2>
+          <p class="lead text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo beatae autem officiis, possimus neque, voluptate numquam minima tempora soluta, harum reiciendis totam magni rem! Eveniet temporibus vitae deleniti tenetur eum.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-3 col-sm-6 mb-3">
+        <img src="http://placekitten.com/300/210" class="img-thumbnail" alt="...">
+        <h3 class="my-3 text-primary">Project1</h3>
+        <p class="text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae numquam quam commodi mollitia sint asperiores ea.</p>
+      </div>
+      <div class="col-lg-3 col-sm-6">
+        <img src="http://placekitten.com/300/210" class="img-thumbnail" alt="...">
+        <h3 class="my-3 text-primary">Project2</h3>
+        <p class="text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae numquam quam commodi mollitia sint asperiores ea.</p>
+      </div>
+      <div class="col-lg-3 col-sm-6 mb-3">
+        <img src="http://placekitten.com/300/210" class="img-thumbnail" alt="...">
+        <h3 class="my-3 text-primary">Project3</h3>
+        <p class="text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae numquam quam commodi mollitia sint asperiores ea.</p>
+      </div>
+      <div class="col-lg-3 col-sm-6">
+        <img src="http://placekitten.com/300/210" class="img-thumbnail" alt="...">
+        <h3 class="my-3 text-primary">Project4</h3>
+        <p class="text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae numquam quam commodi mollitia sint asperiores ea.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- team -->
+  <section class="bg-dark p-sm-5 p-2">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col text-center mb-3">
+          <h2 class="text-light display-2">Teams</h2>
+          <p class="lead text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo beatae autem officiis, possimus neque, voluptate numquam minima tempora soluta, harum reiciendis totam magni rem! Eveniet temporibus vitae deleniti tenetur eum.</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 col-sm-10 mx-auto mb-4">
+        <div class="card">
+          <img src="http://placekitten.com/300/200" alt="...">
+          <div class="card-body">
+            <div class="card-title">
+              <h3 class="text-muted">godeung</h3>
+            </div>
+            <div class="card-subject">
+              <p class="lead text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <div class="text-end">
+              <a href="#" class="text-decoration-none me-2">
+                <i class="bi bi-vimeo fs-5"></i>
+              </a>
+              <a href="#" class="text-decoration-none me-2">
+                <i class="bi bi-whatsapp fs-5"></i>
+              </a>
+              <a href="#" class="text-decoration-none">
+                <i class="bi bi-pin-angle-fill fs-5"></i>
+              </a>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-10 mx-auto mb-4">
+        <div class="card">
+          <img src="http://placekitten.com/300/200" alt="...">
+          <div class="card-body">
+            <div class="card-title">
+              <h3 class="text-muted">godeung</h3>
+            </div>
+            <div class="card-subject">
+              <p class="lead text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <div class="text-end">
+              <a href="#" class="text-decoration-none me-2">
+                <i class="bi bi-vimeo fs-5"></i>
+              </a>
+              <a href="#" class="text-decoration-none me-2">
+                <i class="bi bi-whatsapp fs-5"></i>
+              </a>
+              <a href="#" class="text-decoration-none">
+                <i class="bi bi-pin-angle-fill fs-5"></i>
+              </a>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-10 mx-auto mb-4">
+        <div class="card">
+          <img src="http://placekitten.com/300/200" alt="...">
+          <div class="card-body">
+            <div class="card-title">
+              <h3 class="text-muted">godeung</h3>
+            </div>
+            <div class="card-subject">
+              <p class="lead text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <div class="text-end">
+              <a href="#" class="text-decoration-none me-2">
+                <i class="bi bi-vimeo fs-5"></i>
+              </a>
+              <a href="#" class="text-decoration-none me-2">
+                <i class="bi bi-whatsapp fs-5"></i>
+              </a>
+              <a href="#" class="text-decoration-none">
+                <i class="bi bi-pin-angle-fill fs-5"></i>
+              </a>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- progress -->
+  <section class="p-5">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col text-center mb-3">
+          <h2 class="text-primary display-2">Progress</h2>
+          <p class="lead text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo beatae autem officiis, possimus neque, voluptate numquam minima tempora soluta, harum reiciendis totam magni rem! Eveniet temporibus vitae deleniti tenetur eum.</p>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-sm-10 col-lg-6 text-secondary">
+        <h5>HTML</h5>
+        <div class="progress bg-secondary mb-3">
+          <div class="progress-bar w-50 rounded bg-warning">50%</div>
+        </div>
+        <h5>CSS</h5>
+        <div class="progress bg-secondary mb-3">
+          <div class="progress-bar w-75 rounded bg-danger">75%</div>
+        </div>
+        <h5>Java Script</h5>
+        <div class="progress bg-secondary mb-3">
+          <div class="progress-bar w-100 rounded bg-info">100%</div>
+        </div>
+        <h5>Bootstrap</h5>
+        <div class="progress bg-secondary mb-3">
+          <div class="progress-bar w-25 rounded bg-success">25%</div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <!-- contact -->
+  <section class="p-5 bg-light">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col text-center mb-3">
+          <h2 class="text-primary display-2">Contact Us</h2>
+          <p class="lead text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo beatae autem officiis, possimus neque, voluptate numquam minima tempora soluta, harum reiciendis totam magni rem! Eveniet temporibus vitae deleniti tenetur eum.</p>
+        </div>
+      </div>
+    </div>
+    
+    <div class="row justify-content-center">
+      <div class="col-sm-10 dol-md-8 col-lg-6">
+        <div class="text-center text-secondary">
+          <h3>Got Question?</h3>
+          <p>click here</p>
+        </div>
+        <form class="text-muted">
+          <div class="form-floating mb-3">
+            <input type="text" id="floatingname" class="form-control" placeholder="name">
+            <label for="floatingname">name</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input type="text" id="floatingmail" class="form-control" placeholder="email">
+            <label for="floatingmail">email</label>
+          </div>
+          <div class="form-floating mb-3">
+            <textarea id="floatingText" placeholder="comment" class="form-control w-100" style="height: 200px;"></textarea>
+            <label for="floatingText">comment</label>
+          </div>
+          <a href="#" class="btn btn-outline-dark col-12">Submit Question</a>
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <!-- footer -->
+  <footer class="bg-dark">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center">
+          <h3 class="text-white fw-light text-capitalize p-3">Pure Bootstrap Project</h3>
+          <h4 class="text-light fw-light text-italic mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+          <div class="py-2">
+            <a href="#" class="text-decoration-none me-2">
+              <i class="bi bi-facebook text-light fs-3"></i>
+            </a>
+            <a href="#" class="text-decoration-none me-2">
+              <i class="bi bi-whatsapp text-light fs-3"></i>
+            </a>
+            <a href="#" class="text-decoration-none me-2">
+              <i class="bi bi-instagram text-light fs-3"></i>
+            </a>
+            <a href="#" class="text-decoration-none">
+              <i class="bi bi-github text-light fs-3"></i>
+            </a>
+          </div>
+          <div class="text-light fw-light py-4 m-0">
+            &copy; Copyright reserved by ejin
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
