--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <div class="input-group-append">
               <button class="btn bg-light rounded-0 rounded-end" type="submit">
                 <i class="bi bi-search"></i>
+                <img src="node_modules/bootstrap-icons/icons/search.svg" alt="검색하기">
               </button>
             </div>
           </div>
