--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/main.css">
-  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
   <!-- navbar -->
@@ -39,8 +38,8 @@
             <input class="form-control" type="search" placeholder="Search" aria-label="Search">
             <div class="input-group-append">
               <button class="btn bg-light rounded-0 rounded-end" type="submit">
-                <i class="bi bi-search"></i>
-                <img src="node_modules/bootstrap-icons/icons/search.svg" alt="검색하기">
+                <i class="bi bi-0-circle-fill.svg"></i>
+                <img src="node_modules/bootstrap-icons/icons/0-circle-fill.svg" alt="검색하기">
               </button>
             </div>
           </div>
@@ -353,6 +352,6 @@
     </div>
   </footer>
 
-  
+  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
