--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <body>
   <!-- navbar -->
@@ -38,8 +39,8 @@
             <input class="form-control" type="search" placeholder="Search" aria-label="Search">
             <div class="input-group-append">
               <button class="btn bg-light rounded-0 rounded-end" type="submit">
-                <i class="bi bi-0-circle-fill.svg"></i>
-                <img src="node_modules/bootstrap-icons/icons/0-circle-fill.svg" alt="검색하기">
+                <i class="bi bi-search.svg"></i>
+                <img src="node_modules/bootstrap-icons/icons/search.svg" alt="검색하기">
               </button>
             </div>
           </div>
@@ -352,6 +353,6 @@
     </div>
   </footer>
 
-  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
